# mayhem-bazel-example

./: .bazelrc  BUILD  Dockerfile.template  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod  fuzztest.bazelrc
.github/workflows/: bazel.yml  docker.yml  linux.yml  linux.yml-ignore  mayhem.yml  windows.yml
fuzz/: BUILD  fuzz_calculator.cc  fuzztest_calculator.cc
fuzz_incompat/: BUILD  README.md
harness/: BUILD  entire_file_utils.h  fuzzing_utils.cc  fuzzing_utils.h  harness_utils.h
main/: BUILD  main.c
mayhem/: BUILD  Dockerfile  Mayhemfile
mayhem/config/: Dockerfile  Mayhemfile
scripts/: install_llvm.bat
test/: BUILD  combined_test_calculator.cc  fuzzing_utils_test_calculator.cc  gtest_calculator.cc  harness_test_calculator.cc  test_calculator.cc
test/testsuite/: crash
